foxtrick.properties: updated from en
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8855 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -39,13 +39,13 @@ foxtrick.Ratings.desc=Adds ratings to the match page
 foxtrick.Ratings.HideAverages.desc=Hide average ratings
 foxtrick.Ratings.HatStats.desc=HatStats
 foxtrick.Ratings.HatStatsDetailed.desc=HatStats (detailed)
-foxtrick.Ratings.HatStatsSeparated.desc=HatStats separated per rating
+foxtrick.Ratings.HatStatsSeparated.desc=HatStats by each sector
 foxtrick.Ratings.LoddarStats.desc=LoddarStats
 foxtrick.Ratings.PeasoStats.desc=PeasoStats
 foxtrick.Ratings.VnukStats.desc=VnukStats
 foxtrick.Ratings.HTitaVal.desc=HTitaVal
 foxtrick.Ratings.GardierStats.desc=GardierStats
-foxtrick.BookmarkAdjust.desc=Change the icon associated to a bookmark inserting in the bookmark comment the correspondent code in square bracket: e.g. [cyan] will show the cyan icon. Possible values: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
+foxtrick.BookmarkAdjust.desc=Change the icon associated to a bookmark by entering a colour name in square brackets in the bookmark comment\: e.g. '[cyan]' will change the icon colour to cyan. Possible values\: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
 #MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Shows a median transfer price in transfer compare
 foxtrick.FlagCollectionToMap.desc=Shows a world map with all the countries which flags you have collected in each category
@@ -76,7 +76,7 @@ foxtrick.ForumYouthIcons.youth_series.desc=Adds icon for YouthSeriesID
 foxtrick.ForumYouthIcons.enlarge_input.desc=Enlarges textbox for better writing
 foxtrick.ForumYouthIcons.pre.desc=Adds icon for Forum 'pre' format
 foxtrick.ForumYouthIcons.table.desc=Adds icon for table. Custom tag accepts regular expressions (Mask \ with additional \, eg \\.).
-foxtrick.ForumYouthIcons.symbols.desc=Adds icon for below symbols. Entries are separated by semi-colons. To use a semi-colon enter "/;".
+foxtrick.ForumYouthIcons.symbols.desc=Adds icon for symbols below. Entries are separated by semi-colons. To use a semi-colon enter "/;".
 foxtrick.ForumYouthIcons.debug.desc=Adds icon for FoxTrick debug log
 foxtrick.ForumYouthIcons.settings.desc=Adds icon for FoxTrick settings
 foxtrick.ForumYouthIcons.tournament.desc=Adds icon for TournamentID
@@ -333,7 +333,7 @@ foxtrick.YouthSeriesEstimation.desc=In search result table, estimates the start 
 foxtrick.LocalTime.desc=Optionally show time in local time zone instead of Hattrick time zone
 foxtrick.ForumThreadAutoIgnore.desc=Automatically ignore forum topics with selected tags (topics with [Tag] or {Tag}).
 foxtrick.ForumThreadAutoIgnore.Tags.desc=List of tags, eg: NT, idea, Bug. Comma separated, case insensitive.
-foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Whitelist of threads by IDs (the part before the dot). Threads in whitelist will not be ignored. Comma separated.
+foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=White-list threads by their IDs (the part before the dot). Threads in white-list will not be ignored. Comma separated.
 foxtrick.TableSort.desc=Makes all 'proper' tables sortable which have a header (including tables in forum postings)
 foxtrick.LiveAlert.desc=Show a notification for HT Live goals
 foxtrick.LiveAlert.Sound.desc=Also alert with a sound
@@ -356,7 +356,7 @@ foxtrick.FriendlyInterface.HideAnswerTo.desc=Hide answer-to links in guest book
 foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Hide the secretary if he has nothing to report
 foxtrick.MyMonitor.desc=Monitor recent matches of friends and foes at My Hattrick
 foxtrick.MyMonitor.TeamIcons.desc=Show team logos
-foxtrick.MarkAllAsRead.desc=A button to mark threads in all forums as read
+foxtrick.MarkAllAsRead.desc=A button to mark all threads in all forums as read
 foxtrick.ShowFriendlyBooked.desc=Show whether a team has booked a friendly on series page
 foxtrick.ShowFriendlyBooked.OnDemand.desc=Show friendlies on demand only
 foxtrick.TickerAlert.desc=Display a notification when a new ticker has arrived. Keep text field empty to display alert only and no sound.
@@ -367,12 +367,12 @@ foxtrick.ShowLineupSet.Winning.desc=Highlight winning teams
 foxtrick.SupporterStatsEnhancements.desc=Highlights current squad players in supporter stats
 foxtrick.MobileEnhancements.desc=Set of enhancements for mobile devices
 foxtrick.MatchOrderInterface.desc=Tweaks on the match order interface.
-foxtrick.MatchOrderInterface.PlayedLastMatch.desc=Highlights players which played in the last match and shows last position and time played in the details box
+foxtrick.MatchOrderInterface.PlayedLastMatch.desc=Highlights players which played in the last match and shows the last position and the time played in the details box
 foxtrick.MatchOrderInterface.Specialties.desc=Show player specialties
 foxtrick.MatchOrderInterface.StayOnPage.desc=Stay on the match order page after saving
-foxtrick.MatchOrderInterface.SwapPositions.desc=Add a link to swap players left to right
+foxtrick.MatchOrderInterface.SwapPositions.desc=Add a link to swap players from left to right
 foxtrick.MatchSimulator.desc=Adds a match simulator to the match order interface.
-foxtrick.MatchSimulator.RatingsOnTop.desc=Keeps ratings prediction on top
+foxtrick.MatchSimulator.RatingsOnTop.desc=Keeps rating prediction on top
 foxtrick.MatchSimulator.RatingsBelow.desc=Displays prediction below
 foxtrick.MatchSimulator.RatingsRight.desc=Displays prediction on the right
 foxtrick.HeaderToggle.desc=Clicking on h2-headers toggles showing and hiding of the following section. Remembers last setting individually based on page type and header title
@@ -426,7 +426,7 @@ foxtrick.TeamStats.Injured.label=Injured
 foxtrick.TeamStats.TransferListed.label=Transfer-listed
 foxtrick.TeamStats.Pictures.label=Faces
 foxtrick.TeamStats.PlayedLatest.label=Played in last match
-foxtrick.TeamStats.NotPlayedLatest.label=Did not play last match
+foxtrick.TeamStats.NotPlayedLatest.label=Did not play in last match
 foxtrick.TeamStats.NotTransferListed.label=Not Transfer-listed
 foxtrick.TeamStats.ActivePlayers.label=Active players
 foxtrick.TeamStats.HomeGrownPlayers.label=Home grown players
@@ -572,10 +572,10 @@ matchOrder.noMatchSelected=No match selected
 matchOrder.comparedTo=Compared to:
 matchOrder.previousPrediction=Previous prediction
 matchOrder.AddMatchManually=Add a match manually
-matchOrder.swapPositions=Swap positions
+matchOrder.swapPositions=Swap sides
 matchOrder.options=Options
-matchOrder.staminaDiscount=Stamina discount
-matchOrder.staminaDiscount.title=Sector ratings are discounted according to players contribution to that sector
+matchOrder.staminaDiscount=Stamina effect
+matchOrder.staminaDiscount.title=Sector ratings are affected according to the contributions of each player to each sector
 matchOrder.summary=Summary
 
 #Skills
@@ -659,7 +659,7 @@ PlayerNumber.abbr=#
 TSI=Total Skill Index
 TSI.abbr=TSI
 
-CanBePromotedIn=Can be promoted in
+CanBePromotedIn=Could be promoted in
 CanBePromotedIn.abbr=Prom
 
 Personality=Personality
@@ -700,9 +700,9 @@ Last_match=Last Match
 Last_match.abbr=Last
 Last_stars=Latest stars
 Last_stars.abbr=Rt
-Last_stars_EndOfGame=Last stars at end of game
+Last_stars_EndOfGame=Last yellow stars
 Last_stars_EndOfGame.abbr=Rt
-Last_stars_decline=Last star decline
+Last_stars_decline=Last brown stars
 Last_stars_decline.abbr=Diff
 Last_position=Latest Position
 Last_position.abbr=Pos
@@ -767,7 +767,7 @@ foxtrick.tlconfirmation=Do you wish to transfer list this player? The asking pri
 foxtrick.staffconfirmationhire=Do you wish to hire %num %kind?
 foxtrick.staffconfirmationsack=Do you wish to sack %num %kind?
 foxtrick.ntremoveconfirmation=Do you really want to add/remove this player from your squad?
-foxtrick.confirmstripserver=Do you want to strip the hattrick server from the links to make the usable in forum?
+foxtrick.confirmstripserver=Do you want to strip the Hattrick server from links to make them usable in the forum?
 foxtrick.conferences.signaturetoggle=Signature
 foxtrick.conferences.markunread=Mark unread from here
 foxtrick.tweaks.selectplayer=Select player
@@ -782,7 +782,7 @@ foxtrick.linkscustom.addtag=Add a tag
 foxtrick.linkscustom.tags=Tags
 foxtrick.linkscustom.help=Help
 foxtrick.linkscustom.helptext=First, this is just the editor mode. Clicking on the header of this box switches between editor and normal mode. Only in normal mode your own links are fully functional. External static links are easy to add, just add the full url (Example: http:\/\/example.org\/league\/427\/). For internal static links skip the server part (Example: \/World\/Series\/Default.aspx?LeagueLevelUnitID=427). You only need the tags for rarer dynamic links. With tags the links are dynamically changed using the information of the page you are on. For example http:\/\/example.org\/league\/[LeagueID] would always lead you to the page of the series with the ID that you are just viewing in Hattrick. The tags which are available on each page are listed in the select box. You can only use those which are listed on the page where you are adding your custom link. The text in the box is just a sample template. You can write a tag yourself (using []).
-foxtrick.linkscustom.helptext2=You also can export your links and share them. To do this you can click on the export button and select a file to save that link. Links are appended to that file; hence you can save several links in one file. To import links go to the preference dialog and go to import preferences. Only the entries in the selected file will be imported, which in this case are your links. None of your previous links will be deleted.
+foxtrick.linkscustom.helptext2=You also can export your links and share them. Click on the export button and select a file to save the link. Links are appended to the file, hence you can save several links in one file. To import links go to the import section in the preferences. Only entries in the selected file will be imported, which in this case are your links. None of your existing links will be deleted.
 foxtrick.matches.income=Income:
 foxtrick.tweaks.Birthdays=Birthdays
 foxtrick.tweaks.BirthdayToday=Birthdays today
@@ -798,7 +798,7 @@ foxtrick.balancedTrainer=A %s trainer who is neither attack nor defence-minded.
 #following string uses pluralForms
 notify.newMail=You have received %s new mail.;You have received %s new mails.
 #following string uses pluralForms
-notify.newForumMessage=There are %s new forum reply to you.;There are %s new forum replies to you.
+notify.newForumMessage=There is %s new forum reply to you.;There are %s new forum replies to you.
 
 htLive=HT Live
 
@@ -865,7 +865,7 @@ foxtrick.matches.center=Central
 foxtrick.matches.defense=def
 foxtrick.matches.attack=att
 foxtrick.matches.indfreekick=Ind. set pieces
-foxtrick.matches.wronglang=FoxTrick: The stats cannot be displayed because your language is not registered or because you've set the wrong language in preferences. Please make sure your Foxtrick language is the same as your Hattrick language.
+foxtrick.matches.wronglang=FoxTrick: The stats cannot be displayed because your language is not recognised or because you've set the wrong language in preferences. Please make sure your Foxtrick language is the same as your Hattrick language.
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
@@ -964,8 +964,8 @@ Tournament=Tournament
 
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Switch the view of the table.
-foxtrick.SkillTable.Add_homegrown_title=Adds all home grown players from the current
-foxtrick.SkillTable.showTimeInClub_title=Shows time since player joined the club's senior team
+foxtrick.SkillTable.Add_homegrown_title=Adds all homegrown players from the current senior squad
+foxtrick.SkillTable.showTimeInClub_title=Shows time since player joined the club's senior squad
 foxtrick.SkillTable.detach=Detach
 
 # HTMSPrediction
@@ -995,7 +995,7 @@ CrossTable.graph=Season graph
 CrossTable.table=Cross table
 # will be shown as "R13" denoting round 13
 CrossTable.round=R%s
-CrossTable.noMatches=No matches has been played yet.
+CrossTable.noMatches=No matches have been played yet.
 
 # MyMonitor
 MyMonitor.header=My Monitor
@@ -1003,7 +1003,7 @@ MyMonitor.header=My Monitor
 MyMonitor.teams=%s team in monitor;%s teams in monitor
 MyMonitor.add=Monitor this team
 MyMonitor.remove=Remove this team from my monitor
-MyMonitor.addHelp=Go to the team that you want to monitor, and you could see a box on the sidebar for adding the team.
+MyMonitor.addHelp=Go to the team that you want to monitor, and you will see a box on the sidebar to add that team.
 MyMonitor.removeTeam=Select a team to remove:
 # %n, %t and %i will be replaced by team name, type and ID respectively
 MyMonitor.removeTeamFormat=%n (%t, #%i)
@@ -1012,7 +1012,7 @@ MyMonitor.type.youth=Youth
 MyMonitor.type.nt=National
 
 # MarkAllAsRead
-MarkAllAsRead.title=Mark threads in all forums as read
+MarkAllAsRead.title=Mark all threads in all forums as read
 
 # TickerAlert
 TickerAlert.enable=Enable
@@ -1048,7 +1048,7 @@ showTimeInClub=Show time in club
 sort.up=Up
 sort.down=Down
 action.clearCache=Clear cache
-action.clearCache.title=Clears FoxTricks Xml cache. FoxTrick downloads extra information from Hattrick's servers on demand. Until you close your browser, FoxTrick will use locally stored copies of those afterwards. On rare occasions they can get outdated. Clear the cache if you want FoxTrick to download those extra information again.
+action.clearCache.title=Clears FoxTricks Xml cache. FoxTrick downloads extra information from Hattrick's servers on demand. Until you close your browser, FoxTrick will use locally stored data afterwards. On rare occasions they can get outdated. Clear the cache if you want FoxTrick to download the extra information again.
 featureHighlight.title=Click to highlight most of FoxTrick's features
 
 # fennec ui
@@ -1136,7 +1136,7 @@ foxtrick.prefs.setup.country=Country
 
 foxtrick.prefs.captionCleanupBranch=Stored preferences
 foxtrick.prefs.captionLoadSavePrefs=Export or import preferences
-foxtrick.prefs.labelCleanupBranch=Restore default preferences (Only preferences, no personal settings.)
+foxtrick.prefs.labelCleanupBranch=Restore default preferences (Only preferences, not personal settings.)
 foxtrick.prefs.oauth.delete=Delete OAuth token/secret for the selected team.
 # NOTE - please preserve the braces, inner content will be converted to link
 foxtrick.prefs.oauth.delete.desc=Only applies to this browser. To entirely revoke FoxTrick's access for a team, use Hattrick's {CHPP management}.
@@ -1183,7 +1183,7 @@ about.designers=Designers
 prefs.view.by.category=View by category
 prefs.view.by.page=View by last HT page
 
-delete_foxtrick_branches_ask=Are you sure you want to restore to default settings?
+delete_foxtrick_branches_ask=Are you sure you want to restore the default settings?
 delete_oauth_ask=Delete OAuth token/secret for TeamID  %s?
 disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?
 revoke_permissions_ask=Are you sure you want to revoke all optional permissions?
