module-update.pl: try with end tag
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8869 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -182,6 +182,7 @@
 			"content/shortcuts-and-tweaks/team-popup-links.js",
 			"content/shortcuts-and-tweaks/transfer-search-filters.js",
 			"content/shortcuts-and-tweaks/transfer-search-result-filters.js",
+			//<!-- end categorized modules -->
 
 			"content/entry.js",
 			"content/loader-chrome.js"
