--- a/Info.plist
+++ b/Info.plist
@@ -213,6 +213,7 @@ a good reason to. They are for version bumps in Makefile.
 				<string>content/shortcuts-and-tweaks/team-popup-links.js</string>
 				<string>content/shortcuts-and-tweaks/transfer-search-filters.js</string>
 				<string>content/shortcuts-and-tweaks/transfer-search-result-filters.js</string>
+				<!-- end categorized modules -->
 
 				<string>content/entry.js</string>
 				<string>content/loader-chrome.js</string>
