--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.oex
 *.safariextz
 maintainer/upload.conf.sh
+maintainer/upload.ixweb.conf.sh
 maintainer/locale/crowdinKey.py
 maintainer/*.pem
 maintainer/*.der
