gitignore. use wildcard for conf files
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8884 1e3807c3-0949-0410-b78e-337b627472c1

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,7 @@
 *.crx
 *.oex
 *.safariextz
-maintainer/upload.conf.sh
-maintainer/upload.ixweb.conf.sh
+maintainer/upload.conf.*
 maintainer/locale/crowdinKey.py
 maintainer/*.pem
 maintainer/*.der
