team-popup-links.js: changed custom links format to json (AMO innerHTML replacement)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8915 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -292,7 +292,7 @@ foxtrick.TeamPopupLinks.NextMatch.desc=Next Match
 foxtrick.TeamPopupLinks.AddNextMatch.desc=Adds next match to HT Live
 foxtrick.TeamPopupLinks.YouthMatches.desc=Youth matches
 foxtrick.TeamPopupLinks.Coach.desc=Coach
-foxtrick.TeamPopupLinks.CustomLink.desc=Custom links. The tags [UserID] and [TeamID] will be replaced by the actual IDs.
+foxtrick.TeamPopupLinks.CustomLink.desc=Custom links in seperate lines. The tags [UserID] and [TeamID] will be replaced by the actual IDs. Example: {"link":"http://example.com/[teamid]", "title":"example link", "more": false, "newTab":true}
 foxtrick.SkillColoring.desc=Better visualisation of skills
 foxtrick.SkillColoring.skill_color.desc=Colourises skills
 foxtrick.SkillColoring.only_skill_color.desc=Colourises skills only and not personalities, fan mood etc.
