new-mail sound option back
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8952 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -257,7 +257,9 @@ foxtrick.ContextMenuCopy.HtMl.desc=Option for copying selected content in HT-ML
 foxtrick.ContextMenuCopy.Table.desc=Option for copying table in HT-ML
 foxtrick.NewMail.desc=Highlight new mail count and new forum message count
 foxtrick.NewMail.NotifyMail.desc=Show a notification if there are new mails to you
+foxtrick.NewMail.NotifyMailSound.desc=Also alert with a sound
 foxtrick.NewMail.NotifyForum.desc=Show a notification if there are new forum replies to you
+foxtrick.NewMail.NotifyForumSound.desc=Also alert with a sound
 foxtrick.CopyYouth.desc=Copy functions for youth reports and sources
 foxtrick.CopyYouth.TrainingReport.desc=Training report
 foxtrick.CopyYouth.ScoutComment.desc=Scout comment
