changes tab: show untranslated subversion notes
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8978 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -1175,6 +1175,7 @@ module.link=You can copy and paste this link to the forum to direct here
 
 foxtrick.showReleaseNotes=Show release notes after every update
 foxtrick.versionReleaseNotes=Show release notes for:
+foxtrick.Version=Version:
 
 about.copyright=Copyright
 about.maintainers=Maintainers
