--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -382,11 +382,16 @@ foxtrick.Filter.desc=Adds filters to top players page
 foxtrick.RatingsDisplay.desc=Displays average ratings in a different style
 foxtrick.RatingsDisplay.DenominationsRange.desc=In the 0-20 denominations range
 foxtrick.RatingsDisplay.HatStats.desc=As HatStats
+foxtrick.SafeForWork.desc=Replaces icon and title text of Hattrick tabs
 
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#Save for work
+foxtrick.SafeForWork.title=Title
+foxtrick.SafeForWork.icon=Icon
 
 #Embed Media
 foxtrick.EmbedMedia.EmbeddedImage=Embedded Image
