--- a/manifest.json
+++ b/manifest.json
@@ -152,6 +152,7 @@
 			"content/presentation/local-time.js",
 			"content/presentation/loyalty-display.js",
 			"content/presentation/match-tables.js",
+			"content/presentation/mobile-enhancements.js",
 			"content/presentation/move-manager-online.js",
 			"content/presentation/move-player-select-box.js",
 			"content/presentation/move-player-statement.js",
@@ -159,6 +160,7 @@
 			"content/presentation/original-face.js",
 			"content/presentation/personality-images.js",
 			"content/presentation/ratings-display.js",
+			"content/presentation/safe-for-work.js",
 			"content/presentation/simple-presentation.js",
 			"content/presentation/skill-coloring.js",
 			"content/presentation/skill-translation.js",
