highlight string added
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8993 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -1159,6 +1159,7 @@ foxtrick.prefs.loadNotice=Paste your saved preferences in the text area and pres
 foxtrick.prefs.captionDisableSettings=Disable FoxTrick
 foxtrick.prefs.stagepref=Disable on Stage server
 foxtrick.prefs.disableTemporaryLabel=Disable temporarily
+foxtrick.prefs.highlightLabel=Highlight FoxTricks' features
 foxtrick.prefs.saved=Preferences saved!
 foxtrick.prefs.loaded=Preferences loaded!
 foxtrick.prefs.dismissNotice=(click to dismiss this notice)
