optional Anstoss2 icons
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8996 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -1199,6 +1199,7 @@ revoke_permissions_ask=Are you sure you want to revoke all optional permissions?
 
 foxtrick.prefs.AdditionalOptions=General options
 foxtrick.prefs.smallcopyicons=Show copy icons in the header instead of sidebar
+foxtrick.prefs.anstoss2icons=Use Anstoss2 icons for specialties
 foxtrick.prefs.DisplayHTMLDebugOutput=Show FoxTrick log on bottom of pages (for debugging)
 
 foxtrick.prefs.permissionsHint=%s needs permission to work. Allow access in the following dialog. If you decline this module feature will get disabled.
