match-simulator.js: retrieve tournament matches. only manually till matcharchieve 1.2 with sourcesystem included is out
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8998 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -584,6 +584,7 @@ matchOrder.options=Options
 matchOrder.staminaDiscount=Stamina effect
 matchOrder.staminaDiscount.title=Sector ratings are affected according to the contributions of each player to each sector
 matchOrder.summary=Summary
+matchOrder.tournamentMatch=Tournament match
 
 #Skills
 Playmaking=Playmaking
