Master locale, improved SafeForWork Module description.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9006 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -382,7 +382,7 @@ foxtrick.Filter.desc=Adds filters to top players page
 foxtrick.RatingsDisplay.desc=Displays average ratings in a different style
 foxtrick.RatingsDisplay.DenominationsRange.desc=In the 0-20 denominations range
 foxtrick.RatingsDisplay.HatStats.desc=As HatStats
-foxtrick.SafeForWork.desc=Replaces icon and title text of Hattrick tabs
+foxtrick.SafeForWork.desc=Replaces the icon and the title text of Hattrick tabs to look less suspicious. Make sure you also disable all other modules that might be risky, especially the "Alert" modules.
 
 # -----------------------------------------------------------------------------
 
