--- a/manifest.json
+++ b/manifest.json
@@ -231,7 +231,8 @@
 	],
 	"page_action": {
 		"default_icon": "skin/icon-24.png",
-		"default_title": "FoxTrick enabled"
+		"default_title": "FoxTrick enabled",
+		"default_popup": "content/popup.html"
 	},
 	"options_page" : "content/preferences.html",
 	"homepage_url": "http://www.foxtrick.org/",
