--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -54,7 +54,7 @@ foxtrick.TransferSearchResultFilters.desc=Additional filters for filtering trans
 foxtrick.TransferDeadline.desc=Adds an extra line to each search result on the transfer market with days, hours and minutes until transfer ends
 foxtrick.HTDateFormat.desc=Adds the global/local HT week and season to the most important dates on HT pages
 foxtrick.HTDateFormat.LocalSeason.desc=Display local season instead of global season
-foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Use custom offset to set your first day of the week (0 = Monday/default, -2 = Saturday)
+foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Use custom offset to set your first day of the week (0 \= Monday/default, -2 \= Saturday)
 foxtrick.TeamPopupLinks.desc=Displays a small pop-up window with quick links when you hover over a TeamID link
 foxtrick.StaffMarker.desc=Marks officials' nicks on the forums and on team pages.
 foxtrick.StaffMarker.manager.desc=Mark officials' nicks on team pages.
@@ -75,7 +75,7 @@ foxtrick.ForumYouthIcons.youth_match.desc=Adds icon for YouthMatchID
 foxtrick.ForumYouthIcons.youth_series.desc=Adds icon for YouthSeriesID
 foxtrick.ForumYouthIcons.enlarge_input.desc=Enlarges textbox for better writing
 foxtrick.ForumYouthIcons.pre.desc=Adds icon for Forum 'pre' format
-foxtrick.ForumYouthIcons.table.desc=Adds icon for table. Custom tag accepts regular expressions (Mask \ with additional \, eg \\.).
+foxtrick.ForumYouthIcons.table.desc=Adds icon for table. Custom tag accepts regular expressions (Mask  with additional , eg .).
 foxtrick.ForumYouthIcons.symbols.desc=Adds icon for symbols below. Entries are separated by semi-colons. To use a semi-colon enter "/;".
 foxtrick.ForumYouthIcons.debug.desc=Adds icon for FoxTrick debug log
 foxtrick.ForumYouthIcons.settings.desc=Adds icon for FoxTrick settings
@@ -257,9 +257,9 @@ foxtrick.ContextMenuCopy.HtMl.desc=Option for copying selected content in HT-ML
 foxtrick.ContextMenuCopy.Table.desc=Option for copying table in HT-ML
 foxtrick.NewMail.desc=Highlight new mail count and new forum message count
 foxtrick.NewMail.NotifyMail.desc=Show a notification if there are new mails to you
-foxtrick.NewMail.NotifyMailSound.desc=Also alert with a sound
+foxtrick.NewMail.NotifyMailSound.desc=Play sound on new mail
 foxtrick.NewMail.NotifyForum.desc=Show a notification if there are new forum replies to you
-foxtrick.NewMail.NotifyForumSound.desc=Also alert with a sound
+foxtrick.NewMail.NotifyForumSound.desc=Play sound on new forum reply
 foxtrick.CopyYouth.desc=Copy functions for youth reports and sources
 foxtrick.CopyYouth.TrainingReport.desc=Training report
 foxtrick.CopyYouth.ScoutComment.desc=Scout comment
@@ -294,7 +294,7 @@ foxtrick.TeamPopupLinks.NextMatch.desc=Next Match
 foxtrick.TeamPopupLinks.AddNextMatch.desc=Adds next match to HT Live
 foxtrick.TeamPopupLinks.YouthMatches.desc=Youth matches
 foxtrick.TeamPopupLinks.Coach.desc=Coach
-foxtrick.TeamPopupLinks.CustomLink.desc=Custom links in seperate lines. The tags [UserID] and [TeamID] will be replaced by the actual IDs. Example: {"link":"http://example.com/[teamid]", "title":"example link", "more": false, "newTab":true}
+foxtrick.TeamPopupLinks.CustomLink.desc=Custom links in seperate lines. The tags [UserID] and [TeamID] will be replaced by the actual IDs. Example\: {"link"\:"http\://example.com/[teamid]", "title"\:"example link", "more"\: false, "newTab"\:true}
 foxtrick.SkillColoring.desc=Better visualisation of skills
 foxtrick.SkillColoring.skill_color.desc=Colourises skills
 foxtrick.SkillColoring.only_skill_color.desc=Colourises skills only and not personalities, fan mood etc.
@@ -708,7 +708,7 @@ Last_match=Last Match
 Last_match.abbr=Last
 Last_stars=Latest stars
 Last_stars.abbr=Rt
-Last_stars_EndOfGame=Last yellow stars
+Last_stars_EndOfGame=Last stars at the end of game
 Last_stars_EndOfGame.abbr=Rt
 Last_stars_decline=Last brown stars
 Last_stars_decline.abbr=Diff
@@ -789,7 +789,7 @@ foxtrick.linkscustom.confirmremove=Really remove?
 foxtrick.linkscustom.addtag=Add a tag
 foxtrick.linkscustom.tags=Tags
 foxtrick.linkscustom.help=Help
-foxtrick.linkscustom.helptext=First, this is just the editor mode. Clicking on the header of this box switches between editor and normal mode. Only in normal mode your own links are fully functional. External static links are easy to add, just add the full url (Example: http:\/\/example.org\/league\/427\/). For internal static links skip the server part (Example: \/World\/Series\/Default.aspx?LeagueLevelUnitID=427). You only need the tags for rarer dynamic links. With tags the links are dynamically changed using the information of the page you are on. For example http:\/\/example.org\/league\/[LeagueID] would always lead you to the page of the series with the ID that you are just viewing in Hattrick. The tags which are available on each page are listed in the select box. You can only use those which are listed on the page where you are adding your custom link. The text in the box is just a sample template. You can write a tag yourself (using []).
+foxtrick.linkscustom.helptext=First, this is just the editor mode. Clicking on the header of this box switches between editor and normal mode. Only in normal mode your own links are fully functional. External static links are easy to add, just add the full url (Example\: http\://example.org/league/427/). For internal static links skip the server part (Example\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). You only need the tags for rarer dynamic links. With tags the links are dynamically changed using the information of the page you are on. For example http\://example.org/league/[LeagueID] would always lead you to the page of the series with the ID that you are just viewing in Hattrick. The tags which are available on each page are listed in the select box. You can only use those which are listed on the page where you are adding your custom link. The text in the box is just a sample template. You can write a tag yourself (using []).
 foxtrick.linkscustom.helptext2=You also can export your links and share them. Click on the export button and select a file to save the link. Links are appended to the file, hence you can save several links in one file. To import links go to the import section in the preferences. Only entries in the selected file will be imported, which in this case are your links. None of your existing links will be deleted.
 foxtrick.matches.income=Income:
 foxtrick.tweaks.Birthdays=Birthdays
@@ -873,7 +873,8 @@ foxtrick.matches.center=Central
 foxtrick.matches.defense=def
 foxtrick.matches.attack=att
 foxtrick.matches.indfreekick=Ind. set pieces
-foxtrick.matches.wronglang=FoxTrick: The stats cannot be displayed because your language is not recognised or because you've set the wrong language in preferences. Please make sure your Foxtrick language is the same as your Hattrick language.
+foxtrick.matches.wronglang=FoxTrick\: The stats cannot be displayed because your language is not recognised or because you've set the wrong language in preferences. Please make sure your Foxtrick language is the same as your Hattrick language.
+
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
@@ -1182,7 +1183,7 @@ module.link=You can copy and paste this link to the forum to direct here
 
 foxtrick.showReleaseNotes=Show release notes after every update
 foxtrick.versionReleaseNotes=Show release notes for:
-foxtrick.Version=Version:
+foxtrick.Version=Version\:
 
 about.copyright=Copyright
 about.maintainers=Maintainers
