Quickfix for something not so cool
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9029 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -75,7 +75,7 @@ foxtrick.ForumYouthIcons.youth_match.desc=Adds icon for YouthMatchID
 foxtrick.ForumYouthIcons.youth_series.desc=Adds icon for YouthSeriesID
 foxtrick.ForumYouthIcons.enlarge_input.desc=Enlarges textbox for better writing
 foxtrick.ForumYouthIcons.pre.desc=Adds icon for Forum 'pre' format
-foxtrick.ForumYouthIcons.table.desc=Adds icon for table. Custom tag accepts regular expressions (Mask  with additional , eg .).
+foxtrick.ForumYouthIcons.table.desc=Adds icon for table. Custom tag accepts regular expressions (Mask \ with additional \, eg \\.)
 foxtrick.ForumYouthIcons.symbols.desc=Adds icon for symbols below. Entries are separated by semi-colons. To use a semi-colon enter "/;".
 foxtrick.ForumYouthIcons.debug.desc=Adds icon for FoxTrick debug log
 foxtrick.ForumYouthIcons.settings.desc=Adds icon for FoxTrick settings
