--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -1058,7 +1058,6 @@ sort.up=Up
 sort.down=Down
 action.clearCache=Clear cache
 action.clearCache.title=Clears FoxTricks Xml cache. FoxTrick downloads extra information from Hattrick's servers on demand. Until you close your browser, FoxTrick will use locally stored data afterwards. On rare occasions they can get outdated. Clear the cache if you want FoxTrick to download the extra information again.
-featureHighlight.title=Click to highlight most of FoxTrick's features
 
 # fennec ui
 pageAction.rightSidebar=Show right bar
@@ -1102,24 +1101,26 @@ api.serverUnavailable=Server unavailable
 
 exception.error=Error %s
 
+foxtrick.log.header=FoxTrick Log
+# keep the following line untranslated
+foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
+
 # End of IN-GAME STRINGS.
 
 
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=FoxTrick
-preferences=Preferences
-foxtrick.prefs.preferences=FoxTrick Preferences
-foxtrick.log.header=FoxTrick Log
-# keep the following line untranslated
-foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
-
+toolbar.title=FoxTrick
+toolbar.preferences=Preferences
 status.active=active
 status.enabled=enabled, but not active on %s
 status.disabled=disabled
 
-prefs.screenshot=Screenshot
+prefs.title=FoxTrick Preferences
+
+module.screenshot=Screenshot
+module.link=You can copy and paste this link to the forum to direct here
 
 # tabs in preferences page
 #tabs
@@ -1137,36 +1138,43 @@ tab.about=About
 tab.changes=Changes
 tab.help=Help
 
-foxtrick.prefs.setup=Setup
-foxtrick.prefs.setup.desc=These are your settings that FoxTrick detected. If incorrect, {please report}.
-foxtrick.prefs.setup.locale=Locale
-foxtrick.prefs.setup.dateFormat=Date format
-foxtrick.prefs.setup.country=Country
+prefs.setup=Setup
+prefs.setup.desc=These are your settings that FoxTrick detected. If incorrect, {please report}.
+prefs.setup.locale=Locale
+prefs.setup.dateFormat=Date format
+prefs.setup.country=Country
 
-foxtrick.prefs.captionCleanupBranch=Stored preferences
-foxtrick.prefs.captionLoadSavePrefs=Export or import preferences
-foxtrick.prefs.labelCleanupBranch=Restore default preferences (Only preferences, not personal settings.)
-foxtrick.prefs.oauth.delete=Delete OAuth token/secret for the selected team.
+prefs.storedData.title=Stored preferences
+prefs.storedData.restoreDefault=Restore default preferences (Only preferences, not personal settings.)
+prefs.storedData.oauth.delete=Delete OAuth token/secret for the selected team.
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.oauth.delete.desc=Only applies to this browser. To entirely revoke FoxTrick's access for a team, use Hattrick's {CHPP management}.
-foxtrick.prefs.labelDisableAll=Disable all modules
-foxtrick.prefs.labelRevokePermissions=Revoke all optional permissions (Chrome only)
-foxtrick.prefs.labelSavePrefs=Export preferences and/or personal settings
-foxtrick.prefs.labelSavePrefs_Prefs=Preferences
-foxtrick.prefs.labelSavePrefs_Notes=Personal settings (Templates, custom links, and transfer filters)
-foxtrick.prefs.labelSavePrefs_Token=OAuth token/secret
-foxtrick.prefs.saveNotice=Copy the content in the text area and save as a file, so you could import the preferences in the future.
-foxtrick.prefs.labelLoadPrefs=Import preferences (Current preferences will be overwritten)
-foxtrick.prefs.loadNotice=Paste your saved preferences in the text area and press "Import" to import your preferences.
-foxtrick.prefs.captionDisableSettings=Disable FoxTrick
-foxtrick.prefs.stagepref=Disable on Stage server
-foxtrick.prefs.disableTemporaryLabel=Disable temporarily
-foxtrick.prefs.featureHighlight=Highlight FoxTrick's features
-foxtrick.prefs.saved=Preferences saved!
-foxtrick.prefs.loaded=Preferences loaded!
-foxtrick.prefs.dismissNotice=(click to dismiss this notice)
+prefs.storedData.oauth.delete.desc=Only applies to this browser. To entirely revoke FoxTrick's access for a team, use Hattrick's {CHPP management}.
+prefs.storedData.disableAll=Disable all modules
+prefs.storedData.revokePermissions=Revoke all optional permissions (Chrome only)
 
-pref.xmlLoad=Load XMLs for extra information from Hattrick
+prefs.disable.title=Disable FoxTrick
+prefs.disable.temporary=Disable temporarily
+prefs.disable.stage=Disable on Stage server
+
+prefs.loadSave.title=Export or import preferences
+prefs.loadSave.export=Export preferences and/or personal settings
+prefs.loadSave.export.prefs=Preferences
+prefs.loadSave.export.notes=Personal settings (Templates, custom links, and transfer filters)
+prefs.loadSave.export.token=OAuth token/secret
+prefs.loadSave.export.notice=Copy the content in the text area and save as a file, so you could import the preferences in the future.
+prefs.loadSave.import=Import preferences (Current preferences will be overwritten)
+prefs.loadSave.import.notice=Paste your saved preferences in the text area and press "Import" to import your preferences.
+
+prefs.additional.title=General options
+prefs.additional.xmlLoad=Load XMLs for extra information from Hattrick
+prefs.additional.smallCopyIcons=Show copy icons in the header instead of sidebar
+prefs.additional.anstoss2Icons=Use Anstoss2 icons for specialties
+prefs.additional.featureHighlight=Highlight FoxTrick's features
+prefs.additional.HTMLDebugLog=Show FoxTrick log on bottom of pages (for debugging)
+
+prefs.feedback.saved=Preferences saved!
+prefs.feedback.loaded=Preferences loaded!
+prefs.feedback.dismiss=(click to dismiss this notice)
 
 link.title=Links
 link.homepage=Homepage
@@ -1179,11 +1187,9 @@ link.nightlyOpera=Development builds for Opera
 link.nightlySafari=Development builds for Safari
 link.recentChanges=Recent changes
 
-module.link=You can copy and paste this link to the forum to direct here
-
-foxtrick.showReleaseNotes=Show release notes after every update
-foxtrick.versionReleaseNotes=Show release notes for:
-foxtrick.Version=Version\:
+releaseNotes.show=Show release notes after every update
+releaseNotes.showFor=Show release notes for:
+releaseNotes.version=Version\:
 
 about.copyright=Copyright
 about.maintainers=Maintainers
@@ -1194,16 +1200,11 @@ about.designers=Designers
 prefs.view.by.category=View by category
 prefs.view.by.page=View by last HT page
 
-delete_foxtrick_branches_ask=Are you sure you want to restore the default settings?
-delete_oauth_ask=Delete OAuth token/secret for TeamID  %s?
-disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?
-revoke_permissions_ask=Are you sure you want to revoke all optional permissions?
+prefs.delete_foxtrick_branches_ask=Are you sure you want to restore the default settings?
+prefs.delete_oauth_ask=Delete OAuth token/secret for TeamID  %s?
+prefs.disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?
+prefs.revoke_permissions_ask=Are you sure you want to revoke all optional permissions?
 
-foxtrick.prefs.AdditionalOptions=General options
-foxtrick.prefs.smallcopyicons=Show copy icons in the header instead of sidebar
-foxtrick.prefs.anstoss2icons=Use Anstoss2 icons for specialties
-foxtrick.prefs.DisplayHTMLDebugOutput=Show FoxTrick log on bottom of pages (for debugging)
-
-foxtrick.prefs.permissionsHint=%s needs permission to work. Allow access in the following dialog. If you decline this module feature will get disabled.
+prefs.permissionsHint=%s needs permission to work. Allow access in the following dialog. If you decline this module feature will get disabled.
 
 ###EOF
