added option show translationKeys
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9050 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -1112,6 +1112,9 @@ foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
 # Captions and labels of foxtrick preferences
 
 toolbar.title=FoxTrick
+toolbar.disableTemporary=Disable temporarily
+toolbar.featureHighlight=Highlight features
+toolbar.translationKeys=Show translation keys
 toolbar.preferences=Preferences
 status.active=active
 status.enabled=enabled, but not active on %s
@@ -1170,6 +1173,7 @@ prefs.additional.xmlLoad=Load XMLs for extra information from Hattrick
 prefs.additional.smallCopyIcons=Show copy icons in the header instead of sidebar
 prefs.additional.anstoss2Icons=Use Anstoss2 icons for specialties
 prefs.additional.featureHighlight=Highlight FoxTrick's features
+prefs.additional.translationKeys=Show translation keys instead of translations
 prefs.additional.HTMLDebugLog=Show FoxTrick log on bottom of pages (for debugging)
 
 prefs.feedback.saved=Preferences saved!
